--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/coffeestore
+server.error.whitelabel.enabled=false
+server.port=8080
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.open-in-view=false
+spring.thymeleaf.cache=false
+api.base.path = http://localhost:8080
