--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/coffeestore
 server.error.whitelabel.enabled=false
 server.port=8080
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password
 
 spring.jpa.open-in-view=false
 spring.thymeleaf.cache=false
